<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="config_wifi_random_mac_oui">DA-A1-19</string>
    <string name="widget_default_package_name">com.google.android.deskclock</string>
    <string name="widget_default_class_name">com.android.alarmclock.DigitalAppWidgetProvider</string>
    <string name="default_wallpaper_component">@null</string>
    <string name="image_wallpaper_component">com.android.systemui/com.android.systemui.ImageWallpaper</string>
    <string name="config_networkLocationProviderPackageName">@null</string>
    <string name="config_fusedLocationProviderPackageName">com.android.location.fused</string>
    <string name="config_hardwareFlpPackageName">com.android.location.fused</string>
    <string name="config_geocoderProviderPackageName">@null</string>
    <string name="config_geofenceProviderPackageName">@null</string>
    <string name="config_activityRecognitionHardwarePackageName">@null</string>
    <string name="config_geofenceProvider">com.qualcomm.location</string>
    <string name="config_geofenceServicesProvider">com.qualcomm.location</string>
    <string name="config_comboNetworkLocationProvider">com.qualcomm.location</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="default_sms_application">com.android.mms</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="mobile_provisioning_apn" />
    <string name="mobile_provisioning_url" />
    <string name="mobile_redirected_provisioning_url">http://google.com</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_mms_user_agent">Android-Mms/0.1</string>
    <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">2.android.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
    <string name="config_ethernet_tcp_buffers">524288,1048576,3145728,524288,1048576,2097152</string>
    <string name="config_wifi_tcp_buffers">524288,1048576,2097152,262144,524288,1048576</string>
    <string name="config_chooseAccountActivity">android/android.accounts.ChooseAccountActivity</string>
    <string name="config_chooseTypeAndAccountActivity">android/android.accounts.ChooseTypeAndAccountActivity</string>
    <string name="config_customResolverActivity" />
    <string name="config_customAdbPublicKeyConfirmationComponent">com.android.systemui/com.android.systemui.usb.UsbDebuggingActivity</string>
    <string name="config_customVpnConfirmDialogComponent">com.android.vpndialogs/com.android.vpndialogs.ConfirmDialog</string>
    <string name="config_appsAuthorizedForSharedAccounts">;com.android.vending;com.android.settings;</string>
    <string name="config_defaultNetworkScorerPackageName" />
    <string name="config_persistentDataPackageName">com.google.android.gms</string>
    <string name="config_webViewPackageName">com.google.android.webview</string>
    <string name="config_partial_segment_expire_age">2592000000</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="lock_pattern_view_aspect">square</string>
    <string name="icu_abbrev_wday_month_day_no_year">eeeMMMMd</string>
    <string name="system_ui_date_pattern">@string/icu_abbrev_wday_month_day_no_year</string>
    <string name="font_family_display_4_material">sans-serif-light</string>
    <string name="font_family_display_3_material">sans-serif</string>
    <string name="font_family_display_2_material">sans-serif</string>
    <string name="font_family_display_1_material">sans-serif</string>
    <string name="font_family_headline_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="font_family_subhead_material">sans-serif</string>
    <string name="font_family_menu_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="durationDays">%1$d days</string>
    <string name="durationDayHours">%1$d day %2$d hrs</string>
    <string name="durationDayHour">%1$d day %2$d hr</string>
    <string name="durationHours">%1$d hrs</string>
    <string name="durationHourMinutes">%1$d hr %2$d mins</string>
    <string name="durationHourMinute">%1$d hr %2$d min</string>
    <string name="durationMinutes">%1$d mins</string>
    <string name="durationMinuteSeconds">%1$d min %2$d secs</string>
    <string name="durationMinuteSecond">%1$d min %2$d sec</string>
    <string name="durationSeconds">%1$d secs</string>
    <string name="durationSecond">%1$d sec</string>
    <string name="ellipsis">…</string>
    <string name="ellipsis_two_dots">‥</string>
    <string name="mmiError">Connection problem or invalid MMI code.</string>
    <string name="mmiFdnError">Operation is restricted to fixed dialing numbers only.</string>
    <string name="serviceEnabled">Service was enabled.</string>
    <string name="serviceEnabledFor">Service was enabled for:</string>
    <string name="serviceDisabled">Service has been disabled.</string>
    <string name="serviceRegistered">Registration was successful.</string>
    <string name="serviceErased">Erasure was successful.</string>
    <string name="passwordIncorrect">Incorrect password.</string>
    <string name="mmiComplete">MMI complete.</string>
    <string name="badPin">"The old PIN you typed isn't correct."</string>
    <string name="badPuk">"The PUK you typed isn't correct."</string>
    <string name="mismatchPin">"The PINs you typed don't match."</string>
    <string name="invalidPin">Type a PIN that is 4 to 8 numbers.</string>
    <string name="invalidPuk">Type a PUK that is 8 numbers or longer.</string>
    <string name="needPuk">Your SIM card is PUK-locked. Type the PUK code to unlock it.</string>
    <string name="needPuk2">Type PUK2 to unblock SIM card.</string>
    <string name="enablePin">Unsuccessful, enable SIM/RUIM Lock.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="ClipMmi">Incoming Caller ID</string>
    <string name="ClirMmi">Outgoing Caller ID</string>
    <string name="ColpMmi">Connected Line ID</string>
    <string name="ColrMmi">Connected Line ID Restriction</string>
    <string name="CfMmi">Call forwarding</string>
    <string name="CwMmi">Call waiting</string>
    <string name="BaMmi">Call barring</string>
    <string name="PwdMmi">Password change</string>
    <string name="PinMmi">PIN change</string>
    <string name="CnipMmi">Calling number present</string>
    <string name="CnirMmi">Calling number restricted</string>
    <string name="ThreeWCMmi">Three way calling</string>
    <string name="RuacMmi">Rejection of undesired annoying calls</string>
    <string name="CndMmi">Calling number delivery</string>
    <string name="silent_mode_silent">Ringer off</string>
    <string name="silent_mode_vibrate">Ringer vibrate</string>
    <string name="silent_mode_ring">Ringer on</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="screen_compat_mode_scale">Scale</string>
    <string name="screen_compat_mode_show">Always show</string>
    <string name="screen_compat_mode_hint">Re-enable this in System settings > Apps > Downloaded.</string>
    <string name="select_input_method">Change keyboard</string>
    <string name="show_ime">Show input method</string>
    <string name="hardware">Hardware</string>
    <string name="grant_credentials_permission_message_header">The following one or more apps request permission to access your account, now and in the future.</string>
    <string name="grant_credentials_permission_message_footer">Do you want to allow this request?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="share">Share</string>
    <string name="find">Find</string>
    <string name="websearch">Web Search</string>
    <string name="restr_pin_incorrect">Incorrect</string>
    <string name="restr_pin_enter_old_pin">Current PIN</string>
    <string name="restr_pin_enter_new_pin">New PIN</string>
    <string name="restr_pin_confirm_pin">Confirm new PIN</string>
    <string name="restr_pin_create_pin">Create a PIN for modifying restrictions</string>
    <string name="restr_pin_error_doesnt_match">"PINs don't match. Try again."</string>
</resources>