<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/select_all" android:title="@string/selectAll" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModeCutDrawable" android:id="@id/cut" android:title="@string/cut" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModeCopyDrawable" android:id="@id/copy" android:title="@string/copy" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModePasteDrawable" android:id="@id/paste" android:title="@string/paste" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModeShareDrawable" android:id="@id/share" android:title="@string/share" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModeFindDrawable" android:id="@id/find" android:title="@string/find" android:showAsAction="ifRoom|withText" />
    <item android:icon="?actionModeWebSearchDrawable" android:id="@id/websearch" android:title="@string/websearch" android:showAsAction="ifRoom|withText" />
</menu>