<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="9.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip">
        <com.android.internal.widget.DialogTitle android:ellipsize="end" android:id="@id/alertTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_input_method" android:singleLine="true" style="@android:style/DialogWindowTitle.DeviceDefault" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/hard_keyboard_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:ellipsize="marquee" android:gravity="center_vertical" android:orientation="vertical" android:background="?selectableItemBackground" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeightSmall" android:layout_weight="1.0" android:paddingStart="16.0dip" android:paddingEnd="0.0dip">
                <TextView android:textAppearance="?textAppearanceMedium" android:textColor="?textColorAlertDialogListItem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardware" android:singleLine="true" />
                <TextView android:textAppearance="?textAppearanceSmall" android:textColor="?textColorAlertDialogListItem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_ime" android:singleLine="true" />
            </LinearLayout>
            <Switch android:layout_gravity="center_vertical" android:id="@id/hard_keyboard_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="12.0dip" />
        </LinearLayout>
        <View android:background="?listDividerAlertDialog" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</LinearLayout>