<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="ifContentScrolls"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textColor="?textColorPrimary" android:id="@id/pin_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:inputType="numberPassword" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
            <TextView android:gravity="center" android:id="@id/pin_error_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/restr_pin_incorrect" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/buttonPanel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?dividerHorizontal" android:minHeight="@dimen/alert_dialog_button_bar_height" android:showDividers="beginning" android:dividerPadding="0.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:layoutDirection="locale" style="?android:attr/buttonBarStyle">
                <Button android:textSize="14.0sp" android:layout_gravity="start" android:id="@id/pin_cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/cancel" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
                <Button android:textSize="14.0sp" android:layout_gravity="end" android:id="@id/pin_ok_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/ok" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>