<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?dividerHorizontal" android:showDividers="middle" android:dividerPadding="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:gravity="center|top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingTop="14.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?textAppearanceMedium" android:id="@id/grant_credentials_permission_message_header" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grant_credentials_permission_message_header" android:paddingStart="19.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/packages_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="12.0dip" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="12.0dip">
                <ImageView android:id="@id/permission_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_bullet_key_permission" android:scaleType="fitCenter" android:layout_alignParentStart="true" />
                <TextView android:textAppearance="?textAppearanceMedium" android:textStyle="bold" android:textColor="@color/perms_dangerous_perm_color" android:id="@id/account_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:layout_toEndOf="@id/permission_icon" />
                <TextView android:textAppearance="?textAppearanceSmall" android:textColor="@color/perms_dangerous_perm_color" android:id="@id/account_name" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:layout_below="@id/account_type" android:paddingStart="16.0dip" android:layout_toEndOf="@id/permission_icon" />
                <TextView android:textAppearance="?textAppearanceMedium" android:textStyle="bold" android:textColor="@color/perms_dangerous_perm_color" android:id="@id/authtoken_type" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:layout_below="@id/account_name" android:paddingStart="16.0dip" android:layout_toEndOf="@id/permission_icon" />
            </RelativeLayout>
            <TextView android:textAppearance="?textAppearanceMedium" android:id="@id/grant_credentials_permission_message_footer" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grant_credentials_permission_message_footer" android:paddingStart="19.0dip" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
        <Button android:id="@id/deny_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/deny" android:layout_weight="2.0" style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@id/allow_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/allow" android:layout_weight="2.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>