<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/search_bar" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?textAppearanceMedium" android:textColor="?textColorPrimary" android:gravity="center_vertical" android:id="@id/search_badge" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" android:drawablePadding="0.0dip" />
    <ImageView android:layout_gravity="center_vertical" android:id="@id/search_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/searchview_description_search" style="?attr/actionButtonStyle" />
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_edit_frame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:layout_weight="1.0" android:layoutDirection="locale" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/search_mag_icon" android:visibility="gone" android:layout_width="@dimen/dropdownitem_icon_width" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_marginStart="@dimen/dropdownitem_text_padding_left" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_plate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <view android:ellipsize="end" android:layout_gravity="bottom" android:id="@id/search_src_text" android:background="@null" android:layout_width="0.0dip" android:layout_height="36.0dip" android:minWidth="@dimen/search_view_text_min_width" android:singleLine="true" android:layout_weight="1.0" android:inputType="textAutoComplete|textNoSuggestions" android:dropDownAnchor="@id/search_edit_frame" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0.0dip" android:dropDownVerticalOffset="0.0dip" android:paddingStart="@dimen/dropdownitem_text_padding_left" android:paddingEnd="@dimen/dropdownitem_text_padding_right" class="android.widget.SearchView$SearchAutoComplete" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/search_close_btn" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/searchview_description_clear" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/submit_area" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/search_go_btn" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/searchview_description_submit" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/search_voice_btn" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/searchview_description_voice" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>